# crackann

./: .gitignore  README.md  pyproject.toml
configs/: default.json
configs/paper/: synthetic_adaptive_exact.json  synthetic_adaptive_faiss_hnsw.json  synthetic_adaptive_hnswlib.json  synthetic_adaptive_no_penalty_faiss_hnsw.json  synthetic_adaptive_no_penalty_hnswlib.json  synthetic_faiss_hnsw.json  synthetic_fixed4_template_faiss_hnsw.json  synthetic_fixed4_template_hnswlib.json  synthetic_hnswlib.json  synthetic_l3_experimental.json  synthetic_longtail.json
crackfann/: __init__.py  system.py
crackfann/base_index/: __init__.py  exact_backend.py  interface.py
crackfann/cli/: __init__.py  analyze.py  check_backends.py  common.py  run_workload.py
crackfann/core/: dataset.py  distance.py  types.py
crackfann/designer/: __init__.py  actions.py  monitor.py  promotion.py  split_merge.py
crackfann/materialization/: __init__.py  bitmap_store.py  catalog.py  levels.py  local_ann_store.py
crackfann/metrics/: __init__.py  cumulative_cost.py  logger.py  recall.py
crackfann/planner/: plan.py  router.py  scheduler.py
crackfann/predicate/: __init__.py  cell.py  interval.py  tree.py
crackfann/workload/: __init__.py  generator.py
scripts/: run_v00_break_even.py  run_v02_adaptive_tree.py  run_v03_penalty_sweep.py
tests/unit/: test_bitmap_store.py  test_interval.py  test_local_ann_store.py  test_promotion.py  test_scheduler.py  test_split_policy.py  test_tree_cover.py
